--- a/styles/style.css
+++ b/styles/style.css
@@ -230,8 +230,20 @@ body
 	position: relative;
 	color: #555555;
 	z-index: 2;
-
 }
+
+/* Products Styles */
+
+#hot h2
+{
+	text-transform: uppercase;
+	font-size: 36px;
+	color: #4993e4;
+	text-align: center;
+	font-weight: 100;
+}
+
+
 
 
 
