--- a/styles/style.css
+++ b/styles/style.css
@@ -301,9 +301,53 @@ body
 
 #content .product .text .buttons .btn
 {
-	margin-bottom: 10px;
-	
+	margin-bottom: 10px;	
 }
+
+/* Footer Styles */
+
+#footer 
+{
+	background: #e0e0e0;
+	padding: 20px 0;
+}
+
+#footer ul
+{
+	padding-left: 0;
+	list-style: none;
+}
+
+#footer ul a
+{
+	color: #999999;
+	padding: 20px 0;
+}
+
+
+#footer .social
+{
+	text-align: left;	
+}
+
+#footer .social a
+{
+	margin: 0 10px 0 0;
+	color: #fff;
+	display: inline;
+	width: 30px;
+	height: 30px;
+	border-radius: 15px;
+	line-height: 30px;
+	font-size: 30px;
+	text-align: center;
+	transition: all 0.2s ease-out;
+	vertical-align: bottom;
+	background-color: #555555;
+}
+
+
+
 
 
 
