--- a/styles/style.css
+++ b/styles/style.css
@@ -357,6 +357,25 @@ breadcrumb > li + li:before
 	margin: 0;
 }
 
+/* Shop products styles */
+
+@media (max-width: 768px)
+{
+	.center-responsive
+	{
+		width: 70%;
+		margin: 0 auto;
+	}
+}
+
+@media (max-width: 550px)
+{
+	.center-responsive
+	{
+		width: 95%;
+		margin: 0 auto;		
+	}
+}
 
 /* Footer Styles */
 
