--- a/admin_area/css/style.css
+++ b/admin_area/css/style.css
@@ -1,3 +1,15 @@
+/*
+
+Template : E commerce Store in php and mysqli with bootstrap 3
+Author Name : Mohammed Tahir Ahmed
+Author Email : sad.ahmed22224@gmail.com
+Theme URL: http://www.computerfever.com
+Version : 1.0
+
+
+
+*/
+
 /* Global Styles */
 
 body {
