showing the sales banner in details.php

--- a/styles/style.css
+++ b/styles/style.css
@@ -634,7 +634,7 @@ position: relative;
 width: 100px;
 padding: 6px 50px 6px 15px;
 margin: 40px 50px 10px -71px;
-color: #fff;
+color: #FF0000;
 font-size:18px;
 font-weight:normal;
 background-color: #337ab7;
